--- a/UI/Properties/Resources.resx
+++ b/UI/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="sinCampaña" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sinCampaña.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Publicity_512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Publicity-512.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
